# Bioinformatics-2-Genome-sequencing

./: Cargo.toml  README.md
src/: lib.rs  main_w1.rs
src/w1/: composition.rs  debruijn_from_kmers.rs  debruijn_from_kmers_copy.rs  debruijn_from_string.rs  genome_path.rs  mod.rs  overlap_graph.rs
src/w2/: data_arange.rs  data_structure.rs  eulerian_path.rs  k_universal_circular_string.rs  mod.rs  string_reconstruction.rs
src/w3/: amino_data.rs  complement.rs  generate_theoretical_spectrum.rs  generic_from_amino.rs  mod.rs  rna_to_amino.rs
